[gd_scene load_steps=2 format=2]

[ext_resource path="res://lista/lista_frutas.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button0" type="Button" parent="."]
margin_right = 256.0
margin_bottom = 64.0
text = "Aperte para lista do ex1"

[node name="Label0" type="Label" parent="."]
margin_left = 264.0
margin_right = 520.0
margin_bottom = 56.0
align = 1
valign = 1

[node name="fruta1" type="LineEdit" parent="."]
margin_top = 128.0
margin_right = 112.0
margin_bottom = 184.0

[node name="fruta2" type="LineEdit" parent="."]
margin_left = 136.0
margin_top = 128.0
margin_right = 248.0
margin_bottom = 184.0

[node name="fruta3" type="LineEdit" parent="."]
margin_left = 264.0
margin_top = 128.0
margin_right = 376.0
margin_bottom = 184.0

[node name="fruta4" type="LineEdit" parent="."]
margin_left = 392.0
margin_top = 128.0
margin_right = 504.0
margin_bottom = 184.0

[node name="Label1" type="Label" parent="."]
margin_top = 64.0
margin_right = 136.0
margin_bottom = 128.0
text = "Fruta 1"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 264.0
margin_bottom = 128.0
text = "Fruta2"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 248.0
margin_top = 64.0
margin_right = 384.0
margin_bottom = 128.0
text = "Fruta3"
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
margin_left = 376.0
margin_top = 64.0
margin_right = 512.0
margin_bottom = 128.0
text = "Fruta4"
align = 1
valign = 1

[node name="Button1" type="Button" parent="."]
margin_left = 152.0
margin_top = 200.0
margin_right = 384.0
margin_bottom = 240.0
text = "Clique para gerar sua lista do ex2"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 256.0
margin_right = 488.0
margin_bottom = 328.0

[node name="lista" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0.0196078, 0, 0, 1 )
self_modulate = Color( 0.0235294, 0, 0, 1 )
margin_left = 40.0
margin_top = 12.0
margin_right = 448.0
margin_bottom = 60.0

[node name="Button2" type="Button" parent="."]
margin_top = 384.0
margin_right = 256.0
margin_bottom = 448.0
text = "Aperte para mostrar lista do ex3"

[node name="Label5" type="Label" parent="."]
margin_left = 264.0
margin_top = 384.0
margin_right = 520.0
margin_bottom = 440.0
align = 1
valign = 1

[node name="Button3" type="Button" parent="."]
margin_left = 448.0
margin_top = 480.0
margin_right = 704.0
margin_bottom = 544.0
text = "Aperte para mostrar seu número"

[node name="numero" type="LineEdit" parent="."]
margin_left = 280.0
margin_top = 480.0
margin_right = 392.0
margin_bottom = 536.0

[node name="Label7" type="Label" parent="."]
margin_left = 112.0
margin_top = 480.0
margin_right = 264.0
margin_bottom = 544.0
text = "Digite um número aqui:"
align = 1
valign = 1

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 720.0
margin_top = 480.0
margin_right = 984.0
margin_bottom = 544.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = 8.0
margin_right = 240.0
margin_bottom = 56.0

[connection signal="pressed" from="Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
